# LDC-GB

./: .gitignore  .gitlab-ci.yml  .pylintrc  Dockerfile  Dockerfile.jupyter  Dockerfile.prod  LDC1-1_MBHB_v2_FD_noiseless.hdf5  LDC1-4_MLP2.py  LICENSE  MANIFEST.in  README.md  Sangria_FD.png.odg  evaluate.sh  fastgb_tools.py  ldc_jupyter.def  ldcpipe.def  pylint-monitor  pylint_monitor  pyproject.toml  requirements.jupyter.txt  requirements.txt  searches_even3.sh  setup.cfg  setup.py  setup_ldc.py  setup_prefix
data_generation/: runsim
doc/: Makefile  api.txt  common.txt  conf.py  index.txt  io.txt  lisa.txt  utils.txt  waveform.txt
examples/: GBGPU_tutorial.ipynb  basic_example.py  gbgpu_tutorial.py  gbgpu_tutorial2.py  gpu_loglikelihood.py
gbgpu/: gbgpu.py  noisemodel.py
gbgpu.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
include/: cuda_complex.hpp
ldc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lisa_data_challenge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: CMC.py  CPU_time.py  GPR_gradient.py  GW_odw1.py  GW_odw2.py  GW_odw_search.py  Glitches_and_gaps.py  LDC1-1.py  LDC1-3 overlap.py  LDC1-3-VGB.yaml  LDC1-3.py  LDC1-3_GP.py  LDC1-3_GP_plot.py  LDC1-3_MLE.py  LDC1-3_MLE_plot_overlap.py  LDC1-3_MLP.py  LDC1-3_evaluation_time.py  LDC1-3_global_posterior.py  LDC1-3_plot_posterior.py  LDC1-3_search_stats.py  LDC1-3v2-VGB.yaml  LDC1-4_CD copy.py  LDC1-4_CD.py  LDC1-4_CD_mp.py  LDC1-4_CD_multi_processing.py  LDC1-4_CD_multi_processing_7.py  LDC1-4_GP ETH.py  LDC1-4_GP.py  LDC1-4_GP_GPU.py  LDC1-4_MLE.py  LDC1-4_MLE_Euler.py  LDC1-4_MLE_hand_in.py  LDC1-4_MLE_out_source.py  LDC1-4_MLP copy.py  LDC1-4_MLP.py  LDC1-4_evaluate.py  LDC1-4_evaluate_cut.py  LDC1-4_evaluate_matches.py  (+117 more)
src/: GBGPU.cpp  (+1 more)
(+248 files in other folders)
