# pyproject.toml

[build-system]
requires = ["setuptools>=41.0.0", "wheel", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "lisa-data-challenge"
version = "1.1.1"
description = "LISA Data Challenge software"
readme = "README.md"
authors = [{ name = "ldc-dev" }]
license = { file = "LICENSE" }
dependencies = [
    "numpy", "astropy", "xarray", "cython",
]

[project.urls]
Homepage = "https://lisa.pages.in2p3.fr/LDC"

[tool.flit.module]
name = "ldc"