# pyproject.toml

[build-system]
requires = ["setuptools>=41.0.0", "wheel", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "lisa-data-challenge"
version = "1.2.0"
description = "LISA Data Challenge software"
readme = "README.md"
authors = [{ name = "ldc-dev" }]
license = { file = "LICENSE" }
dependencies = [
    "numpy", "scipy", "astropy", "xarray", "h5py", "matplotlib", "lisaconstants",
    "lisaorbits"
]
requires-python = ">=3.7"

[project.urls]
homepage = "https://lisa-ldc.lal.in2p3.fr"
documentation = "https://lisa.pages.in2p3.fr/LDC"

[tool.flit.module]
name = "ldc"