[build_ext]
include_dirs=/usr/local/include
library_dirs=/usr/local/lib

[metadata]
name = ldc
version = 1.2.0
description = LISA Data Challenge software
long_description = file: README.md, LICENSE
license = GNU
author = ldc-dev
author_email = ldc-dev@lisamission.org
url = https://lisa.pages.in2p3.fr/LDC 

[options]
zip_safe = False
python_requires = >=3.7
include_package_data = True
packages = find:
install_requires =
    numpy
    scipy
    astropy
    xarray
    h5py
    matplotlib
    lisaconstants
    lisaorbits

